# investimentos-rs

./: Cargo.toml  README.md
migrations/: 0001_init.sql
src/: main.rs
src/auth/: jwt.rs  mod.rs
src/db/: mod.rs  queries.rs
src/models/: ativo.rs  carteira.rs  mod.rs  user.rs
src/routes/: ativos.rs  auth.rs  mod.rs
src/templates/: base.html  dashboard.html
static/: style.css
