[package]
name    = "investimentos-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Servidor web assíncrono
axum        = "0.7"
tokio       = { version = "1", features = ["full"] }
tower-http  = { version = "0.5", features = ["cors"] }

# Banco de dados
sqlx        = { version = "0.7", features = [
    "postgres", "runtime-tokio-rustls", "uuid", "chrono"
] }

# Serialização JSON
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Autenticação
bcrypt           = "0.15"
jsonwebtoken     = "9"

# Templates HTML
askama      = { version = "0.12", features = ["with-axum"] }

# Utilitários
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
dotenvy     = "0.15"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror   = "1"
